Closed
Bug 63878
Opened 25 years ago
Closed 24 years ago
Implement alert for 'document contains no data' (was Going to lexmark.com does nothing, but www.lexmark works [Connection reset by peer]
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: matxdr, Assigned: darin.moz)
References
()
Details
Attachments
(2 files)
|
8.01 KB,
patch
|
adamlock
:
review+
rpotts
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
|
709 bytes,
patch
|
gagan
:
review+
rpotts
:
superreview+
scc
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; m18) Gecko/20001226
BuildID: 2000122604
if you go to lexmark.com, Mozilla loads for about half a sec and then stops. No
message, no page change!
Reproducible: Always
Steps to Reproduce:
type lexmark.com in address book and press enter
Actual Results: nothing
Expected Results: something ;-) An error message, www.lexmark.com to be loaded?
On Netscape 4.76, I got Network error, connection reset by peer and on IE5 I
have the page cannot be display, blah blah blah. So maybe an error message
would be good for this case.
Comment 1•25 years ago
|
||
Win2000, same build, I can load up www.lexmark.com just fine. perhaps the site
was just down temporarily? nevertheless, might make someone think about
reliable error messages.. do those get tested under various situations?
www.lexmark.com works fine, but lexmark.com (without thw www.) doesn't. Also,
in the steps to reproduce, you should read address bar, not address book :-)
Comment 3•25 years ago
|
||
over to networking. we should get some kind of feedback that the page couldn't
be loaded.
Assignee: asa → neeti
Status: UNCONFIRMED → NEW
Component: Browser-General → Networking
Ever confirmed: true
QA Contact: doronr → tever
URL: lexmark.com → http://lexmark.com
If you do this in IE 5.5 on Windows 2000 and also IE 5 on Mac, they don't load
the site either. are we saying it's always the responsibility of Moz to correct
it when a site doesn't have the proper DNS config regarding http:// without the www?
Perhaps with our RealNames/Alexa lookup code we should do this though.
Interesting page follows: http://www.tu-chemnitz.de/~fri/web500gw/url.html
URL: http://lexmark.com → lexmark.com
Bad cut and paste on my part: http://andrew2.andrew.cmu.edu/rfc/rfc1738.html
Sorry for the lameness!
Comment 6•25 years ago
|
||
updating summary.
lexmark.com in 4.76 generates a "document contains no data, mozilla does nothing"
URL: lexmark.com → http://lexmark.com
Summary: Going to lexmark.com does nothing → Going to lexmark.com does nothing, but www.lexmark works
Comment 9•25 years ago
|
||
I think it would be good to spin up a dialog for this condition. With no error
message, and the browser just failing silently, it appears that the browser is
broken. Entirely the wrong user feedback.
[And note, this is not a DNS issue at all. It is a valid dns name, ip address
and port listener, but it immediately shuts down the socket after connection.
This lexmark.com address makes a handy testcase, but losing the socket connection
before executing an HTTP transaction is something that happens under other
circumstances].
Target Milestone: Future → ---
Updated•25 years ago
|
Summary: Going to lexmark.com does nothing, but www.lexmark works → Going to lexmark.com does nothing, but www.lexmark works [Connection reset by peer].
Comment 11•24 years ago
|
||
MArking this one as nsbranch-, since it is targted for TM0.9.6.
Comment 12•24 years ago
|
||
wget shows two different errors, but similar.
--22:11:48-- http://lexmark.com/
(try: 3) => `index.html.2'
Connecting to lexmark.com:80... connected!
HTTP request sent, awaiting response...
Read error (Connection reset by peer) in headers.
Retrying.
--22:11:51-- http://lexmark.com/
(try: 4) => `index.html.2'
Connecting to lexmark.com:80... connected!
HTTP request sent, awaiting response...
End of file while parsing headers.
Retrying.
Comment 14•24 years ago
|
||
http
Assignee: neeti → darin
Component: Networking → Networking: HTTP
QA Contact: benc → tever
Comment 15•24 years ago
|
||
Just to restate what needs to be done here: http://lexmark.com opens the
connection and then immediately closes it (nothing we can do about that).
However, in mozilla, there is no feedback to the user that anything has
happened. It appears like the link is "just dead". Nav4.x used to pop up
the 'document contains no data' alert.
Summary: Going to lexmark.com does nothing, but www.lexmark works [Connection reset by peer]. → Implement alert for 'document contains no data' (was Going to lexmark.com does nothing, but www.lexmark works [Connection reset by peer]
| Assignee | ||
Comment 16•24 years ago
|
||
necko is producing the error code NS_ERROR_NET_RESET in this case, which
nsWebShell::EndPageLoad is failing to handle.
there are actually two solutions to this bug:
1) perform URI fixup just as we would if the host lookup failed.
2) prompt the user as in 4x
i think i'd prefer to do both. that is, if any site produces
NS_ERROR_NET_RESET, then we should of course prompt the user accordingly. so,
in the case of lexmark.com, the user would never see the prompt.
Comment 17•24 years ago
|
||
Removing nsbeta1 nomination because this bug has been plussed.
Keywords: nsbeta1
| Assignee | ||
Updated•24 years ago
|
Keywords: mozilla1.0
| Assignee | ||
Comment 18•24 years ago
|
||
this patch implements the solution i outlined in comment #16.
it also adds a unknown error handler, so the user will always see some sort of
message when an error occurs. this seems like a good thing to add, as silently
failing is never very encouraging to users.
Comment 19•24 years ago
|
||
Comment on attachment 73575 [details] [diff] [review]
v1 patch
r=adamlock
Attachment #73575 -
Flags: review+
Comment 20•24 years ago
|
||
Attachment #73575 -
Flags: superreview+
Updated•24 years ago
|
Attachment #73575 -
Flags: approval+
Comment 21•24 years ago
|
||
Comment on attachment 73575 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
| Assignee | ||
Comment 22•24 years ago
|
||
fixed-on-trunk
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 23•24 years ago
|
||
reopening. It's annoying to have this dialog pop up everytime I stop the bonsai
checkins page from fully loading.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 24•24 years ago
|
||
fixed.. this was causing the testerboxen to turn orange :(
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 25•24 years ago
|
||
*** Bug 131118 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
*** Bug 131172 has been marked as a duplicate of this bug. ***
Comment 27•24 years ago
|
||
*** Bug 131362 has been marked as a duplicate of this bug. ***
Comment 28•24 years ago
|
||
after this fix went in i keep seeing "An unknown error occured whilte attempting
to load the requested page" all around the place. For instance when loading
http://www.cnn.com
Rather annoying - in particular since i can't spot any errors there at all.
Current CVS, linux.
Comment 29•24 years ago
|
||
oops...there IS an error there: The netscape toolbar doesn't load as it use to.
right-clicking where it used to be and dismissing context menu uncovers garbage.
So the alert is likely correct. My bad.
Comment 30•24 years ago
|
||
re-opening, this is still happening on mac os9 and osX using todays trunk
works on winNT, win2k, and Linux rh6
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 31•24 years ago
|
||
crap.. mac socket code must be generating a different error code.
investigating...
Status: REOPENED → ASSIGNED
| Assignee | ||
Comment 32•24 years ago
|
||
turns out there's a case in which we can generate the wrong error code
corresponding to this failure mode.
NS_BINDING_FAILED should have been NS_ERROR_NET_RESET.
with this fix, going to lexmark.com works on the Mac again (tested under OSX).
in fact, i'm not sure why we weren't hitting this condition on the other
platforms... it should be a XP bug. anyways...
Comment 33•24 years ago
|
||
Comment on attachment 75242 [details] [diff] [review]
secondary patch
r=gagan
Attachment #75242 -
Flags: review+
Comment 34•24 years ago
|
||
Attachment #75242 -
Flags: superreview+
Comment 35•24 years ago
|
||
Comment on attachment 75242 [details] [diff] [review]
secondary patch
a=scc
Attachment #75242 -
Flags: approval+
| Assignee | ||
Comment 36•24 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 37•24 years ago
|
||
verified: 03/25/02 trunk - win NT4, Linux rh6, mac osX
Status: RESOLVED → VERIFIED
Comment 38•21 years ago
|
||
how do i download this patch?? i keep getting error " this document contain no
data "
Comment 39•21 years ago
|
||
This bug is fixed sinced 2002-03-25 15:22 and you are seeing a different bug if
you get this with recent builds. Also some broken Firewalls can cause this (with
their ad blocker)
You need to log in
before you can comment on or make changes to this bug.
Description
•