fixes bug 63878 "Implement alert for 'document contains no data' (was Going to lexmark.com does nothing, but www.lexmark works [Connection reset by peer]" r=adamlock, sr=rpotts, a=asa